--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 <div id="section01">
-    <div class="menu_box fixed">
+    <div class="menu_box">
         <div class="logo">
             <img src="images/logo.png" alt="logo">
         </div>
