--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="#section04">갤러리</a></li>
                 <li><a href="#section05">오시는길</a></li>
                 <li>
-                    <button class="btn"><img src="images/icon.png" alt=""></button>
+                    <button class="btn"><img src="images/icon3.png" alt=""></button>
                 </li>
             </ul>
         </div>
