--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device=width, initial-scale=1.0">
 <title>벽초지 수목원</title>
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<!-- swiper css -->
 <link rel="stylesheet" href="css/animate.css">
 <!-- wow css -->
 <link rel="stylesheet" href="css/style.css">
@@ -12,9 +14,12 @@
 <link rel="stylesheet" href="css/reset.css">
 <!-- reset css -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<!-- bxslider -->
+<!-- jquery -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!-- bx slider -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<!-- swiper -->
 
 
 <script src="js/wow.min.js"></script>
@@ -297,17 +302,14 @@
 
     <footer id="footer">
         <div class="conts-area">
-            <div class="util">
-                <ul>
-                    <li>벽초지수목원 byukchoji gardens</li>
-                </ul>
+            <div class="footer-logo">
+                <img src="images/footer-logo.png" alt="">
             </div>
             <div class="company-info">
                 <ul>
                     <li class="place">경기도 파주시 부흥로 242 | Gyeonggi-do, Paju-si, Buheung-ro 242</li>
                     <li>수목원 문의 | Visitor Info. : 031.957.2004</li>
-                    <li>그린스쿨 문의 | Green School Info. : 031.957.3002
-                    </li>
+                    <li>그린스쿨 문의 | Green School Info. : 031.957.3002</li>
                 </ul>
             </div>
             <p class="copyright">Copyright © byukchoji gardens. All rights reserved.</p>
