--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="images/Info2.jpg" alt="Info-2" class="info2">
             </div>
             <div class="sec02-txt">
-                <h1 class="intro-main wow slideInDown">동양과 서양정원의 아름다움을 그려낸 <br>
+                <h1 class="intro-main wow slideInRight">동양과 서양정원의 아름다움을 그려낸 <br>
                     벽초지 수목원</h1>
                 <p class="intro-sub wow slideInRight">자연을 사랑하는 한 사람과,<br>
                     예술을 자연으로 그려내는 한 화가가 만나 <br>
@@ -87,8 +87,8 @@
                 <p>6가지 특색 있는 공간들의 이야기를 따라 가보세요.</p>
             </div>
         </div>
-        <div class="introbox1">
-            <div class="img_wrap wow slideInLeft">
+        <div class="introbox1 wow slideInLeft">
+            <div class="img_wrap ">
                 <img class="img__img" src="images/box1.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">흑현무암 화단에 
@@ -101,7 +101,7 @@
                     </p>    
                 </div> 
             </div>
-            <div class="img_wrap wow slideInLeft">
+            <div class="img_wrap">
                 <img class="img__img" src="images/box2.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">유럽의 영웅들과 
@@ -114,7 +114,7 @@
                     </p>    
                 </div>
             </div>
-            <div class="img_wrap wow slideInLeft">
+            <div class="img_wrap">
                 <img class="img__img" src="images/box3.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">친환경 자연속 모험공간 <br>
@@ -128,8 +128,8 @@
             </div>        
         </div>
     
-        <div class="introbox2">
-            <div class="img_wrap wow slideInRight">
+        <div class="introbox2 wow slideInRight">
+            <div class="img_wrap">
                 <img class="img__img" src="images/box4.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">파주의 아치를 지나 
@@ -143,7 +143,7 @@
                 </div>
                 
             </div>
-            <div class="img_wrap wow slideInRight">
+            <div class="img_wrap">
                 <img class="img__img" src="images/box5.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">자연이 인간에게 주는 소박한 선물들 <br>
@@ -155,7 +155,7 @@
                     </p>    
                 </div>
             </div>
-            <div class="img_wrap wow slideInRight">
+            <div class="img_wrap">
                 <img class="img__img" src="images/box6.jpg" />
                 <div class="box-txt">
                     <p class="img_txt">비움의 길 끝에 펼쳐지는 
@@ -242,6 +242,11 @@
           slidesPerView: 2,
           spaceBetween: 40,
           slidesPerGroup : 2,
+        },
+        1920: {
+          slidesPerView: 3,
+          spaceBetween: 20,
+          slidesPerGroup : 3,
         },
       },
       navigation: {
