--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device=width, initial-scale=1.0">
+<meta property="og:description" content="동서양의 아름다운 정원을 모두 품은"/>
+<meta property="og:image" content="images/meta.jpg"/>
+<meta property="og:title" content="벽초지 수목원"/>
+<link rel="shortcut icon" href="images/icon.png">
+<link rel="shortcut icon" href="images/icon.ico">
 <title>벽초지 수목원</title>
+<script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=	e525f61fd8aef576aff4fd40a9667ba2"></script>
+<!-- kakao map -->
 <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 <!-- menu-btn -->
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -50,8 +57,15 @@
             });
         </script>
         <!-- menu end -->
-        <p class="sub-txt  wow slideInDown">동서양의 아름다운 정원을 모두 품은</p>
-        <h1 class="main-txt  wow slideInDown">벽초지 <br> 수목원</h1>
+        <p class="sub-txt fadeIn">동서양의 아름다운 정원을 모두 품은</p>
+        <h1 class="main-txt">벽초지 <br> 수목원</h1>     
+        <script type="text/javascript">
+            $(function(){
+                $("body").ready(function(){
+                    $(".sub-txt").fadeIn(2000);
+                })
+            })
+        </script>   
     </div>
     <!-- menu end -->
     <div class="clear"></div>
